--- a/losnogales/src/i18n/en.json
+++ b/losnogales/src/i18n/en.json
@@ -67,7 +67,7 @@
     "placeholderMail": "hello@example.com",
     "placeholderMessage": "Your message...",
 
-    "ubication": "UBICATION",
+    "ubication": "LOCATION",
 
     "send": "SEND MESSAGE",
 
